k8s/kafka-service.yaml
# k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: kafka-microservices
spec:
  selector:
    app: kafka
  ports:
    - name: kafka
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: kafka-internal
      protocol: TCP
      port: 29092
      targetPort: 29092
  type: ClusterIP
