k8s/order-gateway-service.yaml
# k8s/order-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-gateway-service
  namespace: kafka-microservices
spec:
  selector:
    app: order-gateway
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
  type: ClusterIP
