k8s/ingress.yaml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-microservices-ingress
  namespace: kafka-microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kafka-microservices.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-gateway-service
                port:
                  number: 3001
